# protobuf_mock

./: CMakeLists.txt  foo.proto  main.cpp
